# paddleseg

./: README.md  copy-dlls.ps1  paddleseg.sln
nativesrc/: CMakeLists.txt
nativesrc/include/: paddleseg_api.h
nativesrc/src/: paddleseg_api.cpp
src/Acesoft.PaddleSeg/: Acesoft.PaddleSeg.csproj  Interop.cs  PaddleEngine.cs  PaddleSegEngine.cs
src/Acesoft.PaddleSegCli/: Acesoft.PaddleSegCli.csproj  Program.cs
src/Acesoft.PaddleSegCli/Properties/: launchSettings.json
